[package]
name = "top-helper"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.30"
procfs = "0.16"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15"
terminal_size = "0.3"
